test/sema/negative/repeated_definite_array_expr01.impala
fn main() -> int {
    let x: [int*2] = [0, ..2i16];
    x(0)
}
