test/sema/negative/repeated_definite_array_expr01.output
repeated_definite_array_expr01.impala:2 col 28 - 31: error: expected a positive i32 literal here
